--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,7 @@
 @import "normalize.css";
 @import "base/_global";
 @import "base/_var";
+@import "base/_mixins";
 @import "modules/_large-hero";
 @import "modules/_btn";
 
