--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,5 +1,10 @@
 .large-hero{
+    border-bottom: 10px solid $mainBlue;
     position: relative;
+    
+    &__image{
+        display: block;
+    }
     
     &__text-content{
         position: absolute;
@@ -13,25 +18,18 @@
     &__title{
         font-weight: 300;
         color: $mainBlue;
-        font-size: 1.1rem;
+        font-size: 2.4rem;
         margin: 0;
         
         @mixin atSmall{
-            font-size: 2rem;
+            font-size: 2.8rem;
         }
-        @mixin atMedium{
-            font-size: 3.2rem;
-        }
-        @mixin atLarge{
-            font-size: 4.8rem;
-        }
-
     }
 
     &__subtitle{
         font-weight: 300;
         color: $mainBlue;
-        font-size: 1.1rem;
+        font-size: 1.5rem;
         margin: 0;
         
         @mixin atSmall{
@@ -40,12 +38,17 @@
     }
     &__description{
         color: #fff;
-        font-size: 1.875rem;
+        font-size: 1.1rem;
         font-weight: 200;
         text-shadow: 1px 1px 0 rgb(0,0,0,.1);
         max-width: 30rem;
         margin-left: auto;
         margin-right: auto;
+            
+        @mixin atSmall{
+            font-size: 1.875rem;
+        }
+
     }
 }
 
