--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,7 +1,8 @@
 .wrapper{
     padding-left: 18px;
     padding-right: 18px;
-    max-width: 1200px;
+    overflow: hidden;
+    max-width: 1236px;
     margin-left: auto;
     margin-right: auto;
     
@@ -9,8 +10,18 @@
         max-width: 976px;
     }
     
+    &--b-margin{
+        margin-bottom: 1rem;
+        
+        @mixin atSmall{
+            margin-bottom: 3.875rem;
+        }
+    }
+    
     .wrapper{
         padding-left: 0;
         padding-right: 0;
     }
+    
+    
 }
