--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -7,4 +7,6 @@
 @import "modules/_wrapper";
 @import "modules/_page-section";
 @import "modules/_headline";
+@import "modules/_row";
+@import "modules/_generic-content-container";
 
