--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,17 +2,28 @@
     
     @mixin clearfix;
     
+    &--t-padding{
+        padding-top: 80px;
+    }
+    
     &--gutters{
         margin-right:  -65px;
+    }
+
+    &--gutters-small{
+        margin-right: -45px;
     }
 
     &--gutters-large{
         margin-right: -100px;
     }
 
-
     &--gutters > div{
         padding-right: 65px;
+    }
+
+    &--gutters-small > div{
+        padding-right: 45px;
     }
 
     &--gutters-large > div{
@@ -22,6 +33,7 @@
     &__b-margin-until-medium{
         margin-bottom: 1rem;
     }
+
     
 
 
@@ -58,4 +70,16 @@
             }
         }
     }
+    /* Bigin Equal Hight Rules*/
+    &--equal-hight-at-medium{
+        @mixin atMedium{
+           display: flex; 
+        }
+        
+        & > div{
+            float: none;
+            display: flex;
+        }
+    }
+    
 }
