--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -43,9 +43,6 @@
             margin-bottom: 0;
         }
 
-
-        
-
         &__medium-4{
             float: left;
             width: 33.33%;
@@ -70,9 +67,51 @@
             }
         }
     }
+    
+    @mixin atLarge{
+        
+        &__b-margin-until-large{
+            margin-bottom: 0;
+        }
+
+        &__large-4{
+            float: left;
+            width: 33.33%;
+            
+            
+            &--larger{
+                width: 37%;
+            }
+        }
+
+        &__large-6{
+            float: left;
+            width: 50%;
+        }
+
+        &__large-8{
+            float: left;
+            width: 66.66%;
+            
+            &--smaller{
+                width: 63%;
+            }
+        }
+    }
     /* Bigin Equal Hight Rules*/
     &--equal-hight-at-medium{
         @mixin atMedium{
+           display: flex; 
+        }
+        
+        & > div{
+            float: none;
+            display: flex;
+        }
+    }
+    
+    &--equal-hight-at-large{
+        @mixin atLarge{
            display: flex; 
         }
         
