--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -3,7 +3,10 @@
     position: absolute;
     width: 100%;
     z-index: 2;
-    background-color: rgba($mainBlue, .3);
+    
+    @mixin atMedium{
+        background-color: rgba($mainBlue, .3);
+    }
     
     &__btn-container{
         float: right;
@@ -11,8 +14,42 @@
     
     &__logo{
         position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%) scale(.8);
+        transform-origin: 50% 0;
         background-color: $mainBlue;
         padding: 25px 36px;
-        top: 0;
+        
+        @mixin atMedium{
+            left: auto;
+            transform: translateX(0);
+        }
+        
+    }
+    
+    &__logo__graphic{
+        text-indent: -9999px;
+    }
+    
+    &__menu-content{
+        display: none;
+        
+        @mixin atMedium{
+            display: block;
+        }
+    }
+    
+    &__menu-icon{
+        width: 20px;
+        height: 20px;
+        background-color: white;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        
+        @mixin atMedium{
+            display: none;
+        }
     }
 }
