--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -32,13 +32,7 @@
         text-indent: -9999px;
     }
     
-    &__menu-content{
-        display: none;
-        
-        @mixin atMedium{
-            display: block;
-        }
-    }
+    
     
     &__menu-icon{
         width: 20px;
@@ -50,6 +44,18 @@
         
         @mixin atMedium{
             display: none;
+        }
+    }
+    
+    &__menu-content{
+        display: none;
+        
+        @mixin atMedium{
+            display: block;
+        }
+        
+        &--is-visible{
+            display: block;
         }
     }
 }
