skapat grund för modal

--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -27,6 +27,10 @@
         }
     }
     
+    &--less-margin{
+        margin-bottom: 1.3rem;
+    }
+    
     &--blue{
         color: $mainBlue;
     }
