--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -99,7 +99,7 @@
         }
     }
     /* Bigin Equal Hight Rules*/
-    &--equal-hight-at-medium{
+    .flexbox &--equal-hight-at-medium{
         @mixin atMedium{
            display: flex; 
         }
@@ -110,7 +110,7 @@
         }
     }
     
-    &--equal-hight-at-large{
+    .flexbox &--equal-hight-at-large{
         @mixin atLarge{
            display: flex; 
         }
